# miit_game_parser

./: .gitignore  copy_class.py  main.py  orders.db  pyproject.toml  requirments.txt  visual.ipynb
dataparse/: __init__.py  parse.py
db/: db.py  orders.db
